Bug 1130651 - Don't throw IndexSizeError from insertText command r=masayuki

MozReview-Commit-ID: 7AXGvenAfWv

--HG--
extra : rebase_source : ff4f263468ea424a2e818d768727b1672da8b5f2